--- a/Concursus.Desktop/Views/MainWindow.axaml
+++ b/Concursus.Desktop/Views/MainWindow.axaml
@@ -9,7 +9,7 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     x:DataType="vm:MainWindowViewModel"
-    Icon="/Assets/avalonia-logo.ico"
+    Icon="/Assets/icon.ico"
     mc:Ignorable="d">
 
     <Design.DataContext>
