--- a/Concursus.Desktop/App.axaml
+++ b/Concursus.Desktop/App.axaml
@@ -2,6 +2,7 @@
     x:Class="Concursus.Desktop.App"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="using:Concursus.Desktop.Converters"
     xmlns:local="using:Concursus.Desktop"
     xmlns:suki="using:SukiUI"
     RequestedThemeVariant="Default">
@@ -14,4 +15,11 @@
     <Application.Styles>
         <suki:SukiTheme ThemeColor="Blue" />
     </Application.Styles>
+
+    <Application.Resources>
+        <ResourceDictionary>
+            <converters:InContentPresenter x:Key="InContentPresenter" />
+            <converters:ToGameAsset x:Key="ToGameAsset" />
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
